--- a/views/quienes-somos.jade
+++ b/views/quienes-somos.jade
@@ -31,7 +31,7 @@ block content
         section.servicios_quienes_somos
             h2 ¿Quieres ver nuestros servicios?
             p Así es como podemos ayudarte a hacer tus proyectos en la web.
-            form(action='#')
+            form(action='servicios')
                 button(type='submit') Me interesan sus servicios.
 
 
