--- a/views/servicios.jade
+++ b/views/servicios.jade
@@ -25,7 +25,7 @@ block content
                     //- problema 4
                     article.problema_4_s
                         h3 Quiero funcionalidades o características que ayuden a mis clientes y así tener más personas interesadas en mis servicios o productos.
-                form(action='#')
+                form(action='#contactanos')
                     button(type='submit') Sí, me identifico
         //- ¿Que hacemos? o nuestros servicios.
         section.nuestros_servicios_s
@@ -70,12 +70,12 @@ block content
                 article.portafolio_s
                     h3 PORTAFOLIO
                     p Échale un vistazo a nuestros últimos trabajos.
-                    form(action='#')
+                    form(action='portafolio')
                         button(type='submit') Quiero ver sus trabajos
                 article.blog_s
                     h3 BLOG
                     p Mayormente subiremos ejemplos y consejos prácticos para proyectos en la web.
-                    form(action='#')
+                    form(action='blog/')
                         button(type='submit') Leer los artículos
 
 
